sending player names and randomizing roles correctly

--- a/creatingGame.html
+++ b/creatingGame.html
@@ -77,6 +77,6 @@
     
     <div class="ground"></div>
   </div>
-  <script src="creatingGame.js"></script>
+  <script type="module" src="creatingGame.js"></script>
 </body>
 </html>
